new structure, readme

--- a/basic/index.html
+++ b/basic/index.html
@@ -3,9 +3,10 @@
 		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript">
 			$(function(){
-			
-				$('.heading').html('works');
-			})();
+				
+				$('.heading').html('Gorilla!'.toUpperCase());
+				
+			});
 		</script>
 	</head>
 	<body>
